# journal

./: .gitignore  README.md  book.html  book.html.br  index.html  index.html.br  manifest.json  manifest.json.br  map.html  map.html.br  package-lock.json  package.json  postcss.config.cjs  privacy-policy.html  privacy-policy.html.br  service-worker.js  service-worker.js.br  svelte.config.js  tailwind.config.cjs  terms-of-service.html  terms-of-service.html.br  vite-manifest.json  vite-manifest.json.br  vite.config.js
.github/workflows/: chrome-ext.yml  desktop.yml  web.yml
internal/: version.json  version.json.br
internal/immutable/: error.svelte-2b134ff0.js  error.svelte-2b134ff0.js.br  error.svelte-48e3478b.js  error.svelte-48e3478b.js.br  error.svelte-a8b24a76.js  error.svelte-a8b24a76.js.br  error.svelte-ee9ecbc9.js  error.svelte-ee9ecbc9.js.br  error.svelte-f36ca8f6.js  error.svelte-f36ca8f6.js.br  manifest.json  manifest.json.br  start-02789edf.js  start-02789edf.js.br  start-1beb33a5.js  start-1beb33a5.js.br  start-22b7c171.js  start-22b7c171.js.br  start-2cae4b0e.js  start-2cae4b0e.js.br  start-2d997815.js  start-2d997815.js.br  start-32dd3cf0.js  start-32dd3cf0.js.br  start-34ee2154.js  start-34ee2154.js.br  start-40be98b6.js  start-40be98b6.js.br  start-410e8e4c.js  start-410e8e4c.js.br  start-414b505d.js  start-414b505d.js.br  start-46491b97.js  start-46491b97.js.br  start-4cf0679d.js  start-4cf0679d.js.br  (+50 more)
src/: app.d.ts  app.html  app.postcss  service-worker.ts
src-tauri/: Cargo.toml  mobile.toml  tauri.conf.json
src-tauri/src/: main.rs
(+862 files in other folders)
